# python_project_template

./: README.md  cookiecutter.json
hooks/: pre_gen_project.py
tests/: conftest.py  test_creation.py
{{ cookiecutter.project_name }}/: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
{{ cookiecutter.project_name }}/src/{{cookiecutter.project_slug}}/: __init__.py  hello.py
{{ cookiecutter.project_name }}/tests/unit/: test_hello.py
{{ cookiecutter.project_slug }}/: .flake8  Makefile  README.md  setup.py
{{ cookiecutter.project_slug }}/src/{{cookiecutter.project_slug}}/: __init__.py
{{ cookiecutter.repo_name }}/: .gitignore  Makefile  requirements.txt  requirements_dev.txt  setup.py
